# rusty-processing

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
cli/: Cargo.toml
cli/src/: main.rs
identify/: Cargo.toml
identify/src/: deduplication.rs  lib.rs  mimetype.rs
identify/tests/: identify_regression.rs
processing/: Cargo.toml
processing/resources/: regression-test-cases.json
processing/src/: lib.rs  workspace.rs
processing/src/application/: mbox.rs  zip.rs
processing/src/embedded/: mbox.rs  rfc822.rs  zip.rs
processing/src/io/: mod.rs
processing/src/message/rfc822/: html_message_visitor.rs  message_formatter.rs  mod.rs  pdf.rs  processor.rs  text_message_visitor.rs  transformer.rs
processing/src/metadata/: mod.rs
processing/src/pdf/rfc822/: mod.rs  pdf.rs  transformer.rs
processing/src/processing/: mod.rs  process.rs  processor.rs
processing/src/text/: mod.rs
processing/tests/: process_regression.rs
processing/tests/common/: mod.rs
resources/rfc822/headers-small.eml-expected/: extracted.txt
rusty-processing/: Cargo.toml
rusty-processing-cli/: Cargo.toml
rusty-processing-cli/src/: lib.rs  main.rs
rusty-processing-identify/: Cargo.toml
rusty-processing-identify/src/: identifier.rs  identify.rs  lib.rs  md5_dedupe_identifier.rs  md5_dupe_identifier.rs  message_dedupe_identifier.rs  message_dupe_identifier.rs
rusty-processing-temporal/: Cargo.toml
rusty-processing-temporal/src/: lib.rs  main.rs
rusty-processing-temporal/src/activities/: create_workspace.rs  destroy_workspace.rs  download.rs  multipart_uploader.rs  process_rusty_file.rs  upload.rs
rusty-processing-temporal/src/io/: download.rs  mod.rs  multipart_uploader.rs  s3_get_object.rs  upload.rs
rusty-processing-temporal/src/services/: archive_builder.rs  mod.rs  zip_builder.rs
rusty-processing-temporal/src/util/: mod.rs  parse_s3_uri.rs  services.rs  workspace.rs
rusty-processing/resources/: regression-test-cases.json
rusty-processing/resources/mbox/: ubuntu-no-small.mbox  ubuntu-no.mbox
rusty-processing/resources/rfc822/headers-small.eml-expected/: metadata.json
rusty-processing/src/: lib.rs  stream_io.rs  test_util.rs
rusty-processing/src/application/mbox/: mod.rs  processor.rs
rusty-processing/src/common/: mime_extension_map.rs  mod.rs  output_type.rs  readable_stream.rs  util.rs  wkhtmltopdf.rs  workspace.rs
rusty-processing/src/dupe_id/: identify_dupe.rs  md5_dupe_identifier.rs  message_dupe_identifier.rs  mod.rs
rusty-processing/src/io/: mod.rs
rusty-processing/src/message/rfc822/: html_message_visitor.rs  message_formatter.rs  message_visitor.rs  metadata.rs  mod.rs  pdf.rs  processor.rs  text.rs  text_message_visitor.rs  transformer.rs
rusty-processing/src/process/: mod.rs  process.rs  process_context.rs  process_output.rs  processor.rs
rusty-processing/src/processing/: context.rs  mod.rs  output.rs  process.rs  process_context.rs  process_output.rs  processor.rs
rusty-processing/src/services/: mod.rs  pdf_to_image.rs  wkhtmltopdf.rs
rusty-processing/tests/: process.rs  process_regression.rs
rusty-processing/tests/common/: mod.rs
services/: Cargo.toml
services/src/: archive_builder.rs  config.rs  html_to_pdf.rs  lib.rs  pdf_to_image.rs  tika.rs  xdg_mime.rs
services/tests/: tika_integration.rs
src/: lib.rs  main.rs
src/application/mbox/: processor.rs
src/common/: error.rs  mod.rs  output.rs  output_type.rs  wkhtmltopdf.rs  workspace.rs
src/dupe_id/: identify_dupe.rs  md5_dupe_identifier.rs  message_dupe_identifier.rs  mod.rs
src/mail/: metadata.rs  mod.rs  pdf.rs  text.rs
src/message/rfc822/: html_message_visitor.rs  html_visitor.rs  message_formatter.rs  message_visitor.rs  metadata.rs  mod.rs  pdf.rs  processor.rs  text.rs  text_message_visitor.rs  transformer.rs  visitor.rs
src/processing/: context.rs  mod.rs  process.rs  processor.rs
streaming/: Cargo.toml
streaming/src/: lib.rs
temporal-worker/: Cargo.toml
temporal-worker/src/: lib.rs  main.rs
temporal-worker/src/activities/: download.rs  mod.rs  process_rusty_file.rs  remove_workspace.rs  upload.rs  zip.rs
temporal-worker/src/io/: multipart_uploader.rs  s3_get_object.rs  upload.rs
temporal-worker/src/services/: archive_builder.rs  mod.rs
temporal-worker/src/util/: mod.rs  parse_s3_uri.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
