[package]
name = "rusty-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "~1.4.0"
clap = { version = "~4.3.21", features = ["derive"] }
json = "0.12.4"
md5 = "^0.7.0"
mail-parser = "^0.8.2"
html2text = "^0.6.0"
html2pdf = "^0.6.0"
threadpool = "1.8.1"

[dependencies.uuid]
version = "~1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
