[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "~1.0", features = ["backtrace"] }
clap = { version = "~4.4.0", features = ["derive"] }
processing = { version = "0.1", path = "../processing" }
streaming = { version = "0.1", path = "../streaming" }
tokio = "1.32"
