[package]
name = "identify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "~1.0", features = ["backtrace"] }
bytesize = "1"
file-format = "0.21"
mail-parser = "0.9.0"
md5 = "0.7.0"
services = { version = "0.1.0", path = "../services" }

[dependencies.uuid]
version = "~1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.tokio]
version = "1.32"
features = ["full"]