[package]
name = "processing"
version = "0.1.0"
edition = "2021"

[features]
default = ["archive", "mail"]
archive = []
mail = []

[dependencies]
anyhow = "~1.0.75"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.5"
bytesize = "1"
futures = "0.3"
html-escape = "0.2.13"
html2text = "^0.6.0"
json = "0.12.4"
lazy_static = "~1.4.0"
mail-parser = "0.9.0"
md5 = "0.7.0"
mockall = "~0.11.4"
identify = { version = "0.1.0", path = "../identify" }
services = { version = "0.1.0", path = "../services" }
serde = { version = "~1.0.186", features = ["derive"] }
tempfile = "~3.8.0"
threadpool = "1.8.1"
zip = { version = "0.6.6", default-features = false }

[dependencies.tokio]
version = "1.32"
features = ["full"]

[dependencies.tokio-stream]
version = "0.1"
features = ["io-util"]

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "~1.4.0"
rand = "0.8"
