[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "~4.4.0", features = ["derive"] }
rusty-processing = { version = "0.1.0", path = "../rusty-processing" }
tokio-stream = "0.1"
anyhow = "1.0"
bytes = "1.5"

[dependencies.tokio]
version = "1.32"
features = ["full"]
