[package]
name = "rusty-processing-identify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.75"
lazy_static = "~1.4.0"
md5 = "0.7.0"
mail-parser = "0.9.0"

[dependencies.uuid]
version = "~1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
