[package]
name = "rusty-processing-temporal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-processing = { version = "0.1.0", path = "../rusty-processing" }
temporal-sdk = { git = "https://github.com/temporalio/sdk-core.git", branch = "master" }
temporal-sdk-core-api = { git = "https://github.com/temporalio/sdk-core.git", branch = "master" }
temporal-sdk-core = { git = "https://github.com/temporalio/sdk-core.git", branch = "master" }
url = "~2.4.0"
tokio = { version = "^1.0.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
tokio-stream = "~0.1.14"
anyhow = "~1.0.75"
serde = { version = "~1.0.186", features = ["derive"] }
aws-config = "~0.56.1"
aws-sdk-s3 = "~0.30.0"
lazy_static = "~1.4.0"
tempfile = "~3.8.0"
async_once = "~0.2.6"
filesize = "~0.2.0"
byte-unit = "~4.0.19"