[package]
name = "rusty-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-processing-identify = { version = "0.1.0", path = "../rusty-processing-identify" }
lazy_static = "~1.4.0"
json = "0.12.4"
md5 = "0.7.0"
mail-parser = "^0.8.2"
html2text = "^0.6.0"
html-escape = "0.2.13"
threadpool = "1.8.1"
serde = { version = "~1.0.186", features = ["derive"] }
anyhow = "~1.0.75"
tempfile = "~3.8.0"
mockall = "~0.11.4"

[dev-dependencies]
pretty_assertions = "~1.4.0"