[package]
name = "rusty-processing"
version = "0.1.0"
edition = "2021"

[features]
mail = []

[dependencies]
rusty-processing-identify = { version = "0.1.0", path = "../rusty-processing-identify" }
bytes = "1.5"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
serde = { version = "~1.0.186", features = ["derive"] }
json = "0.12.4"
lazy_static = "~1.4.0"
md5 = "0.7.0"
mail-parser = "0.9.0"
html2text = "^0.6.0"
html-escape = "0.2.13"
anyhow = "~1.0.75"
tempfile = "~3.8.0"
mockall = "~0.11.4"

[dependencies.tokio]
version = "1.32"
features = ["full"]

[dev-dependencies]
pretty_assertions = "~1.4.0"

