[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "~1.0", features = ["backtrace"] }
async-stream = "0.3"
bytes = "1.5"
bytesize = "1"
rand = "0.8.5"
tempfile = "3.8"

[dependencies.tokio]
version = "1.32"
features = ["full"]

[dependencies.tokio-stream]
version = "0.1"
features = ["io-util"]