[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "~1.0", features = ["backtrace"] }
bytes = "1.5"
bytesize = "1"
tempfile = "3.8"
tokio = { version = "1.32", features = ["io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }

[dev-dependencies]
test-utils = { version = "0.1", path = "../test-utils" }
